--- a/style.css
+++ b/style.css
@@ -15,3 +15,16 @@ nav > a{
     padding: 10px;
     
 }
+
+.button-assistir{
+    background: green;
+    border-radius: 6px;
+    width: 124px;
+    height: 51px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: white;
+    border: 1px green;
+    cursor: crosshair;
+}
