--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     /*background-image:url("imagens/peaky_blinders.jpg");*/
-    background-size: 1350px 1350px;
+    /*background-size: 1350px 1350px;*/
 }
 
 nav > a{
@@ -8,29 +8,31 @@ nav > a{
     padding: 10px;
     
 }
-.sobre_titulo{
-    font-family: "Rye", serif;
-}
 
 #sobre{
     font-family: "Rye", serif;
+    text-align: center;
+    
 }
 
+
 .button-assistir{
-    background: green;
+    
     border-radius: 6px;
     width: 124px;
     height: 51px;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: white;
     border: 1px green;
     cursor: crosshair;
 }
 
 .menu ul{
     list-style-type: none ;
+    /*background-image:url("imagens/peaky_blinders.jpg") ;*/
+    background-repeat: no-repeat;
+    
     background-color: #A0A59F;
     box-shadow: 0px 7px 7px rgba(0, 0, 0,192); 
 
@@ -71,3 +73,14 @@ nav > a{
 .menu ul ul li a{
     display: block;
 }
+
+/*header {
+    background-image:url("imagens/peaky_blinders.jpg") ;
+    background-repeat: repeat-y;
+    height: 1000px;
+}*/
+
+.trailer{
+    text-align: center;
+}
+
