--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-
+header {
+    background-image:url("imagens/peaky_blinders_header.jpg") ;
+    height: 500px;
+    background-size: cover;
+    color: #fff;
+}
 nav > a{
     color: white;
     padding: 10px;
@@ -70,11 +75,7 @@ nav > a{
     display: block;
 }
 
-/*header {
-    background-image:url("imagens/peaky_blinders.jpg") ;
-    background-repeat: repeat-y;
-    height: 1000px;
-}*/
+
 
 .trailer{
     text-align: center;
