--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 header{
     
     height: 300px;
@@ -18,18 +23,6 @@ nav > a{
     
 }
 
-
-.button-assistir{
-    
-    border-radius: 6px;
-    width: 124px;
-    height: 51px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    border: 1px green;
-    cursor: crosshair;
-}
 
 .menu ul{
     list-style-type: none ;
@@ -59,8 +52,9 @@ nav > a{
 
 .menu ul ul{
     display: none;
-    left: 0;
+    
     position: absolute;
+    left: 0;
     
 }
 
