--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ nav > a{
 .menu ul li {
     display: inline-block;
     position: relative;
+    top: 20px;
+    left: 20px;
+    padding: 10px;
+   
 }
 
 .menu ul li a{
