Adicionando backgroud linear

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ a{
 
 body{
     color: white;
-    background-color: black;
+    background-image: linear-gradient(to right, black 50%,  #0f0f0f,#242323 ,  #242323);
 }
 
 
