--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@
 
 header{
     
-    height: 200px;
+    height: 150px;
     background-color: #A0A59F;
+    list-style-type: none;
+    
 }
 .logo{
    position: absolute;
-   top: 20px;
+   top: 10px;
    right: 40px;
-   width: 250px;
+   width: 200px;
    display: inline-block;
    border-radius: 30px;
 }
@@ -31,6 +33,8 @@ a{
 #sobre{
     font-family: "Rye", serif;
     text-align: center;
+    position: relative;
+    top: 60px;
     
 }
 
@@ -38,16 +42,66 @@ a{
    
     border:  2px ridge;
   }
-
-
-.menu ul{
-    list-style-type: none ;
-    /*background-image:url("imagens/peaky_blinders.jpg") ;*/
+  
+.menu{
+    list-style: none;
     background-repeat: no-repeat;
     font-family: "Rye", serif;
-    background-color: #A0A59F;
+    background-color: #A0A59F; 
+}
+
+.menu__item{
+    display: inline-block;
+    position: relative;
+    top: 50px;
+    left: 20px;
+    padding: 10px;
     
+}
+
+.menu__item:hover{
+    background-color: black;
+    border-radius: 100px;
+}
+
+.submenu{
+    text-decoration: none;
+    display: inline-block;
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    display: none;
     
+}
+
+.submenu:hover{
+    background-color: black;
+    
+}
+
+.com-submenu:hover .submenu{
+    text-decoration: none;
+    list-style-type: none;
+    display: block;
+    position: absolute;
+    left: 0;
+    padding: 10px;
+    background-color:#A0A59F
+ 
+}
+
+.submenu__item:hover{
+    background-color: black;
+    border-radius: 100px;
+    padding: 3px;
+}
+
+
+/* .menu ul{
+    list-style-type: none ;
+    background-repeat: no-repeat;
+    font-family: "Rye", serif;
+    background-color: #A0A59F; 
     
 
 }
@@ -55,9 +109,9 @@ a{
 .menu ul li {
     display: inline-block;
     position: relative;
-    top: 80px;
+    top: 50px;
     left: 20px;
-    /* padding: 10px; */
+    
    
 }
 
@@ -78,23 +132,58 @@ a{
     position: absolute;
     left: -20px;
     
-    
 }
 
 .menu ul li:hover ul{
     display: block;
+    
 
 }
 
 .menu ul ul{
     width: 150px;
-    height: 350px;
-    
+    height: 350px;   
 }
 
 .menu ul ul li a{
     display: block;
+    padding-right: 0px;
+    padding-top: 0px;
+
+} */
+
+.frase{
+    font-family: "Rye", serif;
+    text-align: center;
+    position: relative;
+    top: 50px;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: aparecer;
 }
+
+@keyframes aparecer{
+    0%{
+        opacity: 0;
+    }
+
+    /* 25%{
+        opacity: 0.25;
+    } */
+
+    50%{
+        opacity: 0.5;
+    }
+
+    /* 75%{
+        opacity: 0.75;
+    } */
+
+    100%{
+        opacity: 1;
+    }
+}
+
 
 .sectionAbsolute{
     display: inline-block;
@@ -103,6 +192,8 @@ a{
     margin-bottom: 50px;
     margin: 20px;
     padding: 20px;
+    position: relative;
+    top: 50px;
     
    
 }
