--- a/style_elenco.css
+++ b/style_elenco.css
@@ -23,6 +23,8 @@ h1{
     padding: 5px;
     margin: 0px 10px 10px 0;
     border-radius: 200px;
+    border: solid 2px #A0A59F;
+    margin-left: 8px;
     
 }
 
@@ -34,7 +36,23 @@ h1{
     padding: 5px;
     margin: 0px 10px 10px 0;
     border-radius: 200px;
+    border: solid 2px #A0A59F;
     margin-top: 15px;
+    margin-left: 8px;
+    
+}
+
+.imagemJhon{
+    height: 300px;
+    width: 300px; 
+    float: left;
+    border: transparent thin solid;
+    padding: 5px;
+    margin: 0px 10px 10px 0;
+    border-radius: 200px;
+    border: solid 2px #A0A59F;
+    margin-top: 15px;
+    margin-left: 8px;
     
 }
 
