--- a/style.css
+++ b/style.css
@@ -97,6 +97,78 @@ a{
 }
 
 
+
+.texto_animado{
+    font-size: 30px;
+    font-weight: 400;
+    margin-top: 50px;
+    font-family: "Rye", serif;
+    text-align: center;
+    color: black;
+    
+}
+
+.texto_animado span{
+    position: relative;
+}
+
+.texto_animado span::before{
+    content: "";
+    color: white;
+    animation: palavras 20s infinite;
+}
+
+.texto_animado span::after{
+    content: "";
+    position: absolute;
+    height: 35px;
+    border-left: 2px solid white;
+    right: -10px;
+    animation: cursor .8s infinite, digita 20s steps(15) infinite;
+    width: calc(100% + 18px);
+    background-color: black;
+}
+
+@keyframes digita{
+    10%, 15%, 30%, 35%, 50%, 55%, 70%, 75%, 90%, 95%{
+        width: 0;
+    }
+
+    5%, 20%, 25%, 40%, 45%, 60%, 65%, 80%, 85%{
+        width: calc(100% + 18px);
+    }
+}
+
+@keyframes cursor{
+    0%{
+        border-left: 2px solid black;
+    }
+
+
+}
+
+@keyframes palavras{
+    0%,20%{
+        content: "BY ORDER OF THE PEAKY FUCKING BLINDERS";
+    }
+
+    21%,40%{
+        content: "NINGUEM OLHA PARA TOMAS SHELBY ASSIM";
+    }
+
+    41%,60%{
+        content: "NÃO MEXA COM OS PEAKY BLINDERS";
+    }
+
+    61%,80%{
+        content: "BOM GOSTO É PARA PESSOAS QUE NÃO PODEM PAGAR POR SAFIRAS";
+    }
+
+    81%,100%{
+        content: "TODA RELIGIÃO É UMA RESPOSTA IDIOTA PARA UMA PERGUNTA IDIOTA";
+    }
+}
+
 /* .menu ul{
     list-style-type: none ;
     background-repeat: no-repeat;
@@ -152,7 +224,7 @@ a{
 
 } */
 
-.frase{
+/* .frase{
     font-family: "Rye", serif;
     text-align: center;
     position: relative;
@@ -167,22 +239,15 @@ a{
         opacity: 0;
     }
 
-    /* 25%{
-        opacity: 0.25;
-    } */
 
     50%{
         opacity: 0.5;
     }
 
-    /* 75%{
-        opacity: 0.75;
-    } */
-
     100%{
         opacity: 1;
     }
-}
+} */
 
 
 .sectionAbsolute{
@@ -237,7 +302,8 @@ a{
 
 body{
     color: white;
-    background-image: linear-gradient(to right, black 50%,  #0f0f0f,#242323 ,  #242323);
+    /* background-image: linear-gradient(to right, black 50%,  #0f0f0f,#242323 ,  #242323); */
+    background-color: black;
 }
 
 
