Adicionando icones no footer e ajustando menu header

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header{
 }
 a{
     color: white;
-    text-decoration: overline;
+    text-decoration: none;
      
 }
 
@@ -62,6 +62,7 @@ a{
 .menu__item:hover{
     background-color: black;
     border-radius: 100px;
+    
 }
 
 .submenu{
@@ -69,13 +70,14 @@ a{
     display: inline-block;
     position: absolute;
     width: 150px;
-    height: 150px;
+    height: 140px;
     display: none;
     
 }
 
 .submenu:hover{
     background-color: black;
+
     
 }
 
@@ -86,7 +88,9 @@ a{
     position: absolute;
     left: 0;
     padding: 10px;
+    margin-top: 10px;
     background-color:#A0A59F
+    
  
 }
 
@@ -101,7 +105,7 @@ a{
 .texto_animado{
     font-size: 30px;
     font-weight: 400;
-    margin-top: 50px;
+    margin-top: 100px;
     font-family: "Rye", serif;
     text-align: center;
     color: black;
@@ -311,16 +315,24 @@ body{
 .trailer{
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 50px;
     
 }
 
 footer{
-    height: 50px;
+    height: 70px;
     background-color: #A0A59F;
     text-align: center;
     position: relative;
-    top: 20px;
-    padding-top: 25px;
+    padding-top: 10px;
     font-family: "Rye", serif;
 }
 
+footer img {
+    position: relative;
+    left: 10px;
+    padding: 5px;
+    width: 30px;
+    height: auto;
+  
+}
