Centralizando section fotos

--- a/style.css
+++ b/style.css
@@ -264,9 +264,10 @@ a{
     margin: auto;
     margin-bottom: 50px;
     margin: 20px;
-    padding: 20px;
+    padding: 30px;
     position: relative;
     top: 50px;
+    left: 7px;
     
    
 }
