Adicionando imagens na aba elenco

--- a/style_elenco.css
+++ b/style_elenco.css
@@ -14,8 +14,7 @@ h1{
     margin-bottom: 100px;
   }
 
-
-.imagemThomas{
+  .elenco img{
     height: 300px;
     width: 300px; 
     float: left;
@@ -25,49 +24,9 @@ h1{
     border-radius: 200px;
     border: solid 2px #A0A59F;
     margin-left: 8px;
-    
-}
+  }
 
-.imagemArthur{
-    height: 300px;
-    width: 300px; 
-    float: left;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    border-radius: 200px;
-    border: solid 2px #A0A59F;
-    margin-top: 15px;
-    margin-left: 8px;
-    
-}
 
-.imagemJhon{
-    height: 300px;
-    width: 300px; 
-    float: left;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    border-radius: 200px;
-    border: solid 2px #A0A59F;
-    margin-top: 15px;
-    margin-left: 8px;
-    
-}
-
-.imagemPolly{
-    height: 300px;
-    width: 300px; 
-    float: left;
-    border: transparent thin solid;
-    padding: 5px;
-    margin: 0px 10px 10px 0;
-    border-radius: 200px;
-    border: solid 2px #A0A59F;
-    margin-top: 15px;
-    margin-left: 8px;
-} 
 
 p {
     
