--- a/style.css
+++ b/style.css
@@ -363,9 +363,8 @@ body{
 footer{
     height: 70px;
     background-color: #A0A59F;
-    text-align: center;
-    position: relative;
-    padding-top: 10px;
+    display: flex;
+    justify-content: center;
     font-family: "Rye", serif;
 }
 
@@ -394,17 +393,8 @@ footer img {
     grid-area: temporada;
 }
 
-@media only screen and (min-width: 481px){
-    ul{
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-
-        grid-template-areas:
-        "home elenco temporada"
-        "logo logo logo"
-        
-        ;
-
-
+@media only screen and (max-width: 481px){
+    footer{
+        flex-direction: column;
     }
 }
