--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ a{
     }
 
     81%,100%{
-        content: "TODA RELIGIÃO É UMA RESPOSTA IDIOTA PARA UMA PERGUNTA IDIOTA";
+        content: "FRIO E CALCULISTA";
     }
 }
 
