--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 header{
-    
     height: 150px;
     background-color: #A0A59F;
     list-style-type: none;
@@ -229,6 +228,12 @@ body{
     color: white;
     background-image: linear-gradient(to bottom, black 50%,  #0f0f0f,#242323 ,  #242323);
     /* background-color: black; */
+    
+}
+
+main{
+    margin: 10px;
+    font-size: 20px;
 }
 
 
@@ -258,8 +263,12 @@ footer img {
 }
 
 
-@media only screen and (max-width: 481px){
+@media only screen and (max-width: 481px) {
    body{
-      font-size: 500px;   
+    margin: 20px ;
+    font-size: 40px;   
    }
 }
+
+
+
